update hero image

--- a/xiangyee-backend/public/index.html
+++ b/xiangyee-backend/public/index.html
@@ -96,11 +96,11 @@
   <!-- Hero -->
   <section id="top" class="bg-white">
     <!-- Image banner -->
-    <div class="w-full h-[80vh] max-h-[900px] overflow-hidden">
+    <div class="w-full overflow-hidden">
     <img
       src="/images/hero.png"
       alt="Xiangyee Hero"
-      class="w-full h-full object-cover translate-y-[-20px]"
+      class="w-full h-full object-cover translate-y-[-20px]" style="object-position: center 85%;"
     />
   </div>
 
